# ntu_mh6803_python_programming

./: README.md  cli.py  extract.py  main.py  pyproject.toml  requirements.txt  test_main.py
backend/: Python Project - Consolidate Tkinter updated.ipynb  cli.py  gui.py  nixpacks.toml  pyproject.toml  requirements.txt  server.py
backend/notebooks/: tkinter.ipynb
backend/source/: __init__.py  async_client.py  main.py  models.py
backend/tests/: test_async_client.py  test_main.py  test_models.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/components/: _appshell.tsx  _consts.tsx  _custom_navbar.tsx  _form.tsx  _form_prices.tsx  _form_retirement.tsx  _layout_props_types.tsx  _layout_types.tsx  _price_chart.tsx  _price_chart_area.tsx  _price_chart_brush.tsx  _price_chart_data.tsx  _retirement_data.tsx  _styles.tsx  _subpage.tsx  _theme.tsx
frontend/pages/: _app.tsx  index.tsx  prices.tsx  retire.tsx
notebooks/: explore.ipynb
source/: main.py
tests/: test_main.py
