[tool.poetry]
name = "ntu-mh6803-python-programming"
version = "0.1.0"
description = "Assignment project by Group 10: to provide viz on crypto historical prices & show financial returns"
authors = ["Loc Nguyen <vinhloc30796@gmail.com>"]
readme = "README.md"
packages = [{include = "ntu_mh6803_python_programming"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.14.1"
pandas = "^1.4.3"
requests = "^2.28.1"
fire = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.1"
black = "^22.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
