[tool.poetry]
name = "ntu-mh6803-python-programming"
version = "0.1.0"
description = "Assignment project by Group 10: to provide viz on crypto historical prices & show financial returns"
authors = ["Loc Nguyen <vinhloc30796@gmail.com>"]
readme = "README.md"
packages = [{include = "source"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
polars = "^0.14.1"
pandas = ">=1.2.5,<1.3"
fire = "^0.4.0"
matplotlib = "^3.5.3"
aiohttp-retry = "^2.8.3"
asyncio = "^3.4.3"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
tk = "^0.1.0"
ttkthemes = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.1"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
black = "^22.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"